# oldflight

./: .gitignore  CMakeLists.txt  Makefile  Makefile.sgi  Makefile.sun  README.md  balloon.c  balloon_mesh.h  bitmap.h  blimp.c  blimp_mesh.h  comm.c  demo.c  draw_logo.c  flight.c  flight.h  graph.c  graph.h  helicopter.c  helicopter_mesh.h  main.c  main.h  maths.c  maths.h  meters.c  net.c  net.h  object.c  objects.h  planes.h  truck.c  truck_mesh.h  uflight.c  uflight.h  vcpkg.json
.github/workflows/: windows-build.yml
airshows/: airshow
oldflight/: oldflight.vcxproj
